@@ -11,6 +11,7 @@
 package com.redhat.devtools.intellij;
 
 import com.intellij.maven.testFramework.MavenImportingTestCase;
+import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.module.Module;
 import com.intellij.openapi.module.ModuleManager;
 import com.intellij.openapi.project.Project;
@@ -23,6 +24,10 @@ import com.intellij.testFramework.builders.JavaModuleFixtureBuilder;
 import com.intellij.testFramework.fixtures.*;
 import com.redhat.devtools.intellij.lsp4mp4ij.psi.core.utils.IPsiUtils;
 import com.redhat.devtools.intellij.lsp4mp4ij.psi.internal.core.ls.PsiUtilsLSImpl;
+import kotlin.coroutines.EmptyCoroutineContext;
+import kotlinx.coroutines.BuildersKt;
+import kotlinx.coroutines.CoroutineScopeKt;
+import kotlinx.coroutines.future.FutureKt;
 import org.apache.commons.io.FileUtils;
 
 import java.io.File;
@@ -40,8 +45,8 @@ public abstract class MavenModuleImportingTestCase extends MavenImportingTestCas
     final JavaTestFixtureFactory factory = JavaTestFixtureFactory.getFixtureFactory();
     myProjectBuilder.addModule(JavaModuleFixtureBuilder.class);
     IdeaProjectTestFixture myFixture = factory.createCodeInsightFixture(myProjectBuilder.getFixture());
-    myFixture.setUp();
     setTestFixture(myFixture);
+    myFixture.setUp();
     LanguageLevelProjectExtension.getInstance(myFixture.getProject()).setLanguageLevel(LanguageLevel.JDK_17);
   }
 
@@ -59,9 +64,10 @@ public abstract class MavenModuleImportingTestCase extends MavenImportingTestCas
     for(File projectDir : projectDirs) {
       File moduleDir = new File(project.getBasePath(), projectDir.getName() + counter++);
       FileUtils.copyDirectory(projectDir, moduleDir);
-      VirtualFile pomFile = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(moduleDir).findFileByRelativePath("pom.xml");
+      VirtualFile pomFile = LocalFileSystem.getInstance().refreshAndFindFileByNioFile(moduleDir.toPath()).findFileByRelativePath("pom.xml");
       pomFiles.add(pomFile);
     }
+
     // Calling the non-suspending importProjects method instead of the Kotlin suspending function
     // importProjectsAsync(file: VirtualFile) to prevent blocking unit tests starting from IntelliJ version 2024.2.
     importProjects(pomFiles.toArray(VirtualFile[]::new));
@@ -70,14 +76,19 @@ public abstract class MavenModuleImportingTestCase extends MavenImportingTestCas
     for(Module module : modules) {
       setupJdkForModule(module.getName());
     }
-    // Starting from IntelliJ 2024.2, indexing runs asynchronously in a background thread, https://plugins.jetbrains.com/docs/intellij/testing-faq.html#how-to-handle-indexing.
-    // Use the following method to ensure indexes are fully populated before proceeding.
-    IndexingTestUtil.waitUntilIndexesAreReady(project);
-    return Arrays.stream(modules).skip(1).toList();
+
+    // REVISIT: After calling setupJdkForModule() initialization appears to continue in the background
+    // and a may cause a test to intermittently fail if it accesses the module too early. A 5-second wait
+    // is hopefully long enough but would be preferable to synchronize on a completion event if one is
+    // ever introduced in the future.
+  //  Thread.sleep(5000L);
+
+    return Arrays.stream(modules).toList();
   }
 
   protected Module createMavenModule(File projectDir) throws Exception {
-    return createMavenModules(Collections.singletonList(projectDir)).getLast();
+      List<Module> modules = createMavenModules(Collections.singletonList(projectDir));
+      return modules.get(modules.size() - 1);
   }
 
   /**
@@ -104,6 +115,6 @@ public abstract class MavenModuleImportingTestCase extends MavenImportingTestCas
   }
 
   protected IPsiUtils getJDTUtils() {
-    return PsiUtilsLSImpl.getInstance(getTestFixture().getProject());
+    return PsiUtilsLSImpl.getInstance(getProject());
   }
 }
